Updated the content to match with my details.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Draco by @afnizarnur</title>
+    <title>Vishal Saha</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Draco is free PSD &amp; HTML template by @afnizarnur">
@@ -63,19 +63,9 @@
 		<div class="container">
 			<h1>Work<br>Experiences</h1>
 			<ul class="work-list">
-				<li>2014-2015</li>
-				<li><a href="#">PT Traveloka Indonesia</a></li>
-				<li>Web Designer</li>
-			</ul>
-			<ul class="work-list">
-				<li>2014-2015</li>
-				<li><a href="#">Wego</a></li>
-				<li>UI/UX Designer</li>
-			</ul>
-			<ul class="work-list">
-				<li>2014-2015</li>
-				<li><a href="#">Garuda Indonesia</a></li>
-				<li>System Designer</li>
+				<li>August 2023 - Present</li>
+				<li><a href="#">Samsung Semiconductor India Research</a></li>
+				<li>Software Engineer</li>
 			</ul>
 		</div>
 	</div>
@@ -85,20 +75,12 @@
 		<div class="container">
 			<h1>Award &amp;<br>Achievements</h1>
 			<ul class="award-list list-flat">
-				<li>January 2014</li>
-				<li>Attained PHP5 certification</li>
-				<li>Hold world/Olympic record</li>
+				<li>2021</li>
+				<li> Secured All India Rank (AIR) 29 amongst 101922 candidates in GATE Computer Science 2021</li>
 			</ul>
 			<ul class="award-list list-flat">
-				<li>December 2014</li>
-				<li>Audited X number of clients in only Y amount of time</li>
-				<li>Held a perfect attendance record</li>
-				<li>Were promoted after only X months in the role</li>
-			</ul>
-			<ul class="award-list list-flat">
-				<li>March 2014</li>
-				<li>Placed employees at X companies</li>
-				<li>United multiple teams post-merger</li>
+				<li>2019</li>
+				<li> Reached The 2019 ICPC Asia Kharagpur Regional Contest which took place at IIT Kharagpur</li>
 			</ul>
 		</div>
 	</div>
@@ -108,16 +90,12 @@
 		<div class="container">
 			<h1>Technical<br>Skills</h1>
 			<ul class="skill-list list-flat">
-				<li>Web Technology</li>
-				<li>HTML / CSS / SASS / PHP / Javascript</li>
+				<li>Programming Languages</li>
+				<li>C++ | C | Python | Java</li>
 			</ul>
 			<ul class="skill-list list-flat">
-				<li>Database</li>
-				<li>MySQL / MongoDB / Oracle / Access</li>
-			</ul>
-			<ul class="skill-list list-flat">
-				<li>Framework</li>
-				<li>Laravel / CodeIgniter / Zend / Ruby On Rails</li>
+				<li>Frameworks and Tools</li>
+				<li>Git | OpenCL | Vulkan</li>
 			</ul>
 		</div>
 	</div>
@@ -133,7 +111,7 @@
 		<div class="container">
 			<div class="units-row">
 			    <div class="unit-50">
-			    	<p>Handcrafted by Afnizar Nur Ghifari</p>
+					<p>Vishal Saha</p>
 			    </div>
 			    <div class="unit-50">
 					<ul class="social list-flat right">
