Updated about section

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>Vishal Saha</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Draco is free PSD &amp; HTML template by @afnizarnur">
-    <meta name="author" content="">
+    <meta name="description" content="Vishal Saha Portfolio">
+    <meta name="author" content="Vishal Saha">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="css/kube.min.css" />
     <link rel="stylesheet" href="css/font-awesome.min.css" />
@@ -52,7 +52,14 @@
 					<h1>I live in<br><span id="typed"></span></h1>
 				</div>
 				<p>
-					Draco is a constellation in the far northern sky. Its name is Latin for dragon. Draco is circumpolar (that is, never setting) for many observers in the northern hemisphere. It was one of the 48 constellations listed by the 2nd century astronomer Ptolemy.
+					Vishal is GPU programming professional with over a year of experience working as Senior Software Engineer at Samsung Electronics.
+					He has been involved with implementation of various open standards (OpenCL/Vulkan) for GPU programming.
+					His day to day involves optimizing performance of APIs by levaraging hardware capabilities.
+					In the past he has worked in the domain software defined networking, where he designed fault tolerant network functions from the 5G Core.
+				</p>
+				<p>
+					He believes in expanding knowledge and staying updated with the latest advancements in technology.
+					He thrives to tackle complex challenges and enjoy working on projects that require both creativity and technical expertise.
 				</p>
 			</div>
 		</div>
