--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<style>
 		.intro h1:before {
 			/* Edit this with your name or anything else */
-			content: 'DRACO';
+			content: 'VISHAL';
 		}
 	</style>
 </head>
@@ -72,7 +72,7 @@
 			<ul class="work-list">
 				<li>August 2023 - Present</li>
 				<li><a href="#">Samsung Semiconductor India Research</a></li>
-				<li>Software Engineer</li>
+				<li>Senior Software Engineer</li>
 			</ul>
 		</div>
 	</div>
